# mykobo-ext-rs

./: Cargo.toml  Makefile
src/: lib.rs
src/geolocation/: mod.rs  models.rs
src/monitoring/: mod.rs  models.rs
tests/: lib.rs
tests/geolocation/: deserialisation_test.rs  mod.rs  test_geolocator_client.rs
tests/geolocation/fixtures/: bad_free_ip_api_response.json  good_free_ip_api_response.json  ip_info_api_response.json  ip_info_with_negative_coordinates.json
tests/monitoring/: mod.rs  test_merkel_science_deserialisation.rs
