[package]
name = "mykobo-ext-rs"
version = "0.1.1"
edition = "2024"
repository="git@github.com:mykobo/mykobo-ext-rs.git"
publish = false

[dependencies]
serde_json = "1.0"
isahc = { version = "1.6", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
tokio = { version = "1.46.1", features = ["full"] }

[dev-dependencies]
httpmock = "0.7.0"
pretty_assertions = "1.4.1"
